tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_72.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((((y * y) - (1223 * 1)) * ((+ 2) * (y * 0))) MOD ((+ (200 + 1)) MOD ((1 MOD 0) DIV (1223 - 1))));
               p := ((((+ 200) DIV (1 * 200)) * ((z MOD 2) * (1 MOD 1223))) <= (((z DIV y) MOD (0 * z)) + (+ (x - 200))));
               y := (- (((0 MOD y) - (1 + 200)) MOD (+ (2 MOD z))));
  (* error *)  p := (((- (p * 1223)) > ((y DIV 0) DIV (2 + 200))) OR (((x + x) * (z + 200)) = ((200 - 2) MOD (1 * x))));
               y := ((((z MOD 1223) DIV (x MOD x)) MOD ((1 MOD 2) MOD (x * 200))) - (((- 200) DIV (200 DIV 0)) DIV ((200 MOD 0) - (1 + x))));
               q := ((- ((- 200) + (- 1))) >= (- ((+ x) * (1223 - 1223))));
               x := ((((x DIV 1) + (x - 1223)) * ((x DIV 2) + (+ 2))) DIV (((+ 1223) DIV (2 DIV z)) + ((1223 DIV 0) * (200 MOD x))));
               q := ((((+ z) + (0 * z)) * ((- z) DIV (y - 1223))) >= (((+ 0) MOD (- 0)) MOD ((+ 2) + (+ x))));
               y := ((+ ((0 MOD z) - (1 - z))) + (((+ 1223) + (- 2)) DIV ((0 * z) MOD (1223 - 1223))));
               x := ((((2 + 1223) * (1 * y)) MOD ((1 DIV 200) + (2 - z))) MOD (((+ 2) + (x + 1223)) + ((200 * y) * (+ 2))))
END Test14.